--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: rubiks_ar
+name: test_ar
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,20 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  ar_flutter_plugin: ^0.4.3
+  vector_math: ^2.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_modular: ^3.3.1
-  mobx: ^2.0.3
-  flutter_mobx: ^2.0.1
 
 dev_dependencies:
-  flutter_modular_test: ^1.0.1
   flutter_test:
     sdk: flutter
-  mobx_codegen: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,10 +46,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/triangle.png
+    - assets/3d/rubiks_cube_3x3x3/
+    - assets/3d/rubiks_cube_2x2x2/
+    - assets/images/icon.png
+    - assets/images/rubiks3x3x3.png
+    - assets/images/rubiks2x2x2.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
