--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   ar_flutter_plugin: ^0.4.3
   vector_math: ^2.0.8
+  animated_splash_screen: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,6 +55,7 @@ flutter:
     - assets/images/rubiks3x3x3.png
     - assets/images/rubiks2x2x2.png
     - assets/images/loading.gif
+    - assets/images/loading2.gif
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
